Migrated to Kotlin. Registration and Main screen has been added. Made through the interaction of fragments and NavController.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,54 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="SubmitButton" parent="@style/Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:background">@drawable/submit_button_background</item>
+        <item name="android:fontFamily">@string/font_family_regular</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_width">264dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="EmailEditText" parent="@style/Widget.AppCompat.EditText">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/registration_widget_normal_background</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:fontFamily">@string/font_family_regular</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:layout_width">264dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="RegistrationText" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:layout_width">264dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@string/font_family_regular</item>
+        <item name="android:textColor">@color/registration_normal_color</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="RegTitle" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:fontFamily">@string/font_family_regular</item>
+        <item name="android:textColor">@color/registration_normal_color</item>
+        <item name="android:layout_weight">10</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
 </resources>
