--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5a98ec</color>
-    <color name="colorPrimaryDark">#457dca</color>
-    <color name="colorAccent">#88b0e7</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#009FE3</color>
+
+    <color name="registration_normal_color">#808080</color>
+    <color name="registration_black">#404040</color>
+    <color name="registration_error_color">#E02D2D</color>
+
+    <color name="welcome_description_default_color">#BEBEBE</color>
+    <color name="welcome_description_color">#8FDEFF</color>
+    <color name="welcome_logo_grey_color">#B0B0B0</color>
+    <color name="welcome_logo_blue_color">#7DD8FF</color>
+
+    <color name="welcome_background_default_color">#6A6A6A</color>
+    <color name="welcome_background_qsr_color">#009FE3</color>
+    <color name="welcome_card_background_default_color">#878787</color>
+    <color name="welcome_card_background_qsr_color">#35C0FB</color>
 </resources>
