--- a/app/src/main/res/layout/operations_fragment.xml
+++ b/app/src/main/res/layout/operations_fragment.xml
@@ -26,11 +26,13 @@
         app:layout_constraintTop_toBottomOf="@+id/settingsBtn"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/modeViewPager"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/operations_view_holder"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
